--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,6 +35,19 @@ form {
   font-size: 20px;
   font-weight: bold;
 }
+
+.Home{
+  float: right;
+  border: 1px solid #000000;
+  background-color: rgb(91, 40, 173);
+
+  color: #ffffff;
+  text-align: center;
+  padding: 15px 15px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+}
 .register {
   display: flex;
   justify-content: center;
@@ -53,7 +66,7 @@ form {
   margin: 5px;
 }
 .sideboxes {
-  width: 50%; 
+  width: 70%;
   display: flex; 
   flex-wrap: wrap; 
   align-items: center; 
@@ -100,4 +113,8 @@ tr:hover{
 .eventInfo{
   display: inline-table;
   margin: 10px;
+}
+
+inset{
+  box-shadow: 5px 10px;
 }
