Bootstrap welcome page; issues with lists

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -108,7 +108,7 @@ tr,td{
   border-bottom: 1px solid;
 }
 tr:hover{
-  background-color: #D6EEEE;
+  background-color: #570861;
 }
 .eventInfo{
   display: inline-table;
